ecmascript/parser/tests/test262-error-references/fail/d65452ddaed68d73.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/d65452ddaed68d73.js:1:5
  |
1 | var super
  |     ^^^^^

